# favicorn

./: .clangd  .flake8  .gitignore  CMakeLists.txt  Pipfile  README.md  __main__.py  pyproject.toml  setup.py
.github/workflows/: pages.yml  python-package.yml
__tests__/: conftest.py  factories.py  test_core.py  test_disconnect.py  test_keepalive.py
__tests__/controllers/asgi/: test_controller.py  test_http.py  test_websocket.py
__tests__/controllers/http/: conftest.py
__tests__/controllers/http/asgi/: test_controller.py
__tests__/controllers/http/http_parsers/: conftest.py  test_parsers.py
__tests__/controllers/http/http_serializers/: conftest.py  test_serializers.py
__tests__/controllers/http/parsers/: test_parsers.py
__tests__/controllers/http/serializers/: conftest.py  test_serializers.py
__tests__/event_buses/: test_event_buses.py
__tests__/http/: conftest.py  test_disconnect.py  test_get.py  test_keepalive.py  test_post.py
__tests__/http/controllers/asgi/: test_controller.py
__tests__/http/event_buses/: test_event_buses.py
__tests__/http/parsers/: conftest.py  test_httptools.py  test_parsers.py
__tests__/http/serializers/: conftest.py  test_serializers.py
__tests__/parser/: test_parser.py
__tests__/protocols/http/parsers/: conftest.py  test_parsers.py
__tests__/protocols/http/serializers/: conftest.py  test_serializers.py
__tests__/socket_providers/: test_inet.py  test_unix.py
cmake/: CMakeCache.txt  Config.cmake.in  cmake_install.cmake  favicorn_coreConfig.cmake
dockerfiles/: Dockerfile  Dockerfile.dockerignore
favicorn/: __init__.py  asgi_controller.py  config.py  connection.py  connection_factory.py  connection_manager.py  global_state.py  http_protocol.py  http_streams.py  iconnection.py  iconnection_factory.py  iconnection_manager.py  iglobal_state.py  iprotocol.py  isocket_provider.py  keepalive_manager.py  parser.py  reader.py  request.py  request_parser.py  response_parser.py  response_serializer.py  serializer.py  server.py  socket_providers.py  utils.py
favicorn/connections/: __init__.py
favicorn/connections/http/: __init__.py  connection.py  controller_events.py  factory.py  icontroller.py  icontroller_factory.py  ievent_bus.py  iparser.py  iparser_factory.py  iserializer.py  parser.py  request_metadata.py  serializer.py
favicorn/connections/http/controllers/: __init__.py  asgi.py
favicorn/connections/http/controllers/asgi/: controller.py  factory.py  responses.py  scope_builder.py
favicorn/connections/http/event_buses/: __init__.py  deque.py
favicorn/connections/http/parsers/: __init__.py  httptools_parser.py
favicorn/connections/http/parsers/h11_parser/: parser.py
favicorn/connections/http/parsers/httptools_parser/: factory.py  parser.py
favicorn/connections/http/serializers/: __init__.py  base.py
favicorn/connections/tcp/: connection.py
favicorn/controllers/asgi/: __init__.py  controller.py  event_manager.py  factory.py  responses.py  scope_builder.py
favicorn/controllers/http/: request_metadata.py
favicorn/controllers/http/asgi/: controller.py  event_manager.py  factory.py  responses.py  scope_builder.py
favicorn/controllers/http/parsers/h11_parser/: parser.py
favicorn/controllers/http/parsers/httptools_parser/: factory.py  parser.py
favicorn/controllers/http/serializers/: base.py
favicorn/event_buses/: deque.py
favicorn/extension/: core.cpp  server.hpp
favicorn/i/http/: request_metadata.py
favicorn/i/websocket/: serializer.py
favicorn/parsers/http/h11_parser/: parser.py
favicorn/parsers/http/httptools_parser/: factory.py  parser.py
favicorn/parsers/websocket/: wsproto_parser.py
favicorn/protocols/http/parsers/h11_parser/: parser.py
favicorn/protocols/http/serializers/: base.py
favicorn/protocols/websocket/parsers/: wsproto_parser.py
favicorn/protocols/websocket/serializers/: wsproto_serializer.py
favicorn/serializers/http/: base.py
favicorn/serializers/websocket/: wsproto_serializer.py
favicorn/socket_providers/: inet.py  unix.py
favicorn_core/: __init__.pyi  core.cpp
favicorn_core/include/: uuid.hpp
favicorn_core/lib/llhttp/: uuid.cpp
favicorn_core/src/: module.hpp  scope.hpp
favicorn_core/src/http_parser/: http_parser.cpp  http_parser.hpp
favicorn_core/src/loop/: loop.cpp  loop.hpp
favicorn_core/src/pyasgi/: pyasgi.cpp  pyasgi.hpp
favicorn_core/src/pyrequest/: pyrequest.hpp
favicorn_core/src/pyserver/: pyserver.cpp  pyserver.hpp
favicorn_core/src/server/: server.cpp  server.hpp
