[tool.black]
line-length=79
exclude=''

[tool.pytest.ini_options]
asyncio_mode="auto"
log_cli_level = "DEBUG"

[tool.mypy]
strict=true
exclude = [ 'build' ]

[[tool.mypy.overrides]]
module='httptools.*'
ignore_missing_imports=true

[[tool.mypy.overrides]]
module="cmake_build_extension"
ignore_missing_imports=true

[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
  "cmake_build_extension",
  "pybind11"
]
build-backend = "setuptools.build_meta"
